# sodas-data-sprint

./: .gitignore  Justfile  README.md  pyproject.toml
results/: results.md
scripts/: animate_eagle.py  cables.py  find_eagle.py  load.py  plot_all.py  proc.sh  queries-all.py  queries.py  trace_eagle.py  zip_proc.py
src/sdsprint/: utils.py
tests/: test_resampling.py
