[project]
name = "sdsprint"
version = "0.1.0"
description = "SoDas Data Sprint"
readme = "README.md"
authors = [
    { name = "jsr-p", email = "jonas.raaschou@sodas.ku.dk" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "geopandas>=1.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[project.scripts]
sdsprint= "sdsprint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
